@startuml

title __BARCODESCANNER's Class Diagram__\n

  namespace jp.oist.abcvlib.camera {
    namespace barcodescanner {
      class jp.oist.abcvlib.camera.barcodescanner.BarcodeGraphic {
          {static} - MARKER_COLOR : int
          {static} - STROKE_WIDTH : float
          {static} - TEXT_COLOR : int
          {static} - TEXT_SIZE : float
          - barcode : Barcode
          - barcodePaint : Paint
          - labelPaint : Paint
          - rectPaint : Paint
          + draw()
          ~ BarcodeGraphic()
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace barcodescanner {
      class jp.oist.abcvlib.camera.barcodescanner.BarcodeScannerProcessor {
          {static} - TAG : String
          - barcodeScanner : BarcodeScanner
          + BarcodeScannerProcessor()
          + stop()
          # detectInImage()
          # onFailure()
          # onSuccess()
          {static} - logExtrasForTesting()
      }
    }
  }
  

  jp.oist.abcvlib.camera.barcodescanner.BarcodeGraphic -up-|> jp.oist.abcvlib.camera.GraphicOverlay.Graphic
  jp.oist.abcvlib.camera.barcodescanner.BarcodeScannerProcessor -up-|> jp.oist.abcvlib.camera.VisionProcessorBase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
